issue-fixed: download card on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -184,8 +184,13 @@ label {
 
   .sidebar-container {
     order: 2;
-    margin-top: 30px;
+    margin-top: 70px;
     max-width: 350px;
     margin-bottom: 30px;
+  }
+
+  .btn {
+    position: absolute;
+    margin-top: -65px;
   }
 }
